# Social-Gaming

./: .gitignore  CMakeLists.txt  README.md  index.cpp
docs/: Interpreter_Summary.md  Interpretor_Demo_Explanation.md
frontend/html/: README.md  chatgame.html  creategamesession.html  joinroom.html  landingpage.html  player.html
interpreter/include/: Environment.h  Expression.h  SGData.h  Statement.h
parser-example/src/: interpretor_demo.cpp
web-socket-networking/: .gitignore  CMakeLists.txt  README.md  webchat.html
web-socket-networking/lib/: CMakeLists.txt
web-socket-networking/lib/networking/: CMakeLists.txt
web-socket-networking/lib/networking/json-parser/: CMakeLists.txt  demo.cpp
web-socket-networking/lib/networking/src/: Server.cpp
web-socket-networking/lib/networking/src/businessLogic/: GameOrchestrator.cpp  Player.cpp
web-socket-networking/lib/networking/src/businessLogic/exampleGames/: rockpaperscissors.game
web-socket-networking/lib/networking/src/exampleGames/: rockpaperscissors.game
web-socket-networking/lib/networking/src/include/: Environment.h  Expression.h  GameOrchestrator.h  Player.h  Server.h
web-socket-networking/lib/parsing/: .gitignore  CMakeLists.txt  README.md
web-socket-networking/lib/parsing/include/: Configuration.h  Environment.h  Expression.h  ExtractWhatItem.h  GameLogic.h  GameNode.h  Helper.h  Map.h  MapEntry.h  MapHandler.h  PrintHelper.h  Rules.h  Setup.h
web-socket-networking/lib/parsing/src/: Configuration.cpp  Environment.cpp  Expression.cpp  ExtractWhatItem.cpp  GameLogic.cpp  GameNode.cpp  Helper.cpp  Map.cpp  MapEntry.cpp  MapHandler.cpp  PrintHelper.cpp  Rules.cpp  Setup.cpp  socialgaming_parser_demo.cpp
web-socket-networking/test/: CMakeLists.txt  ClientTest.cpp  NodeForTesting.cpp  README.md  RulesTest.cpp  ServerTest.cpp
web-socket-networking/tools/client-ftxui/: chatclient.cpp
web-socket-networking/tools/client-ncurses/: CMakeLists.txt  chatclient.cpp
web-socket-networking/tools/server/: CMakeLists.txt  chatserver.cpp
